[package]
name = "dioxus-examples"
version = "0.0.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.1"
dioxus = { path = "../packages/dioxus" }
rand = "0.8.2"


[dev-dependencies]
# For the tide ssr examples
async-std = { version = "1.9.0", features = ["attributes"] }
tide = { version = "0.15.0" }

# For the doc generator
pulldown-cmark = { version = "0.8.0", default-features = false }


anyhow = "*"


[lib]
path = "common.rs"

[[example]]
path = "hello.rs"
name = "hello"

[[example]]
path = "tide_ssr.rs"
name = "tide_ssr"

[[example]]
path = "doc_generator.rs"
name = "doc_generator"

[[example]]
path = "router.rs"
name = "router"
