[package]
name = "dioxus-examples"
version = "0.0.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.1"
dioxus = { path = "../packages/dioxus" }
dioxus-ssr = { path = "../packages/ssr" }
rand = "0.8.2"
anyhow = "*"


[dev-dependencies]
# For the tide ssr examples
async-std = { version = "1.9.0", features = ["attributes"] }
tide = { version = "0.15.0" }

# For the doc generator
pulldown-cmark = { version = "0.8.0", default-features = false }

dioxus-webview = { path = "../packages/webview", version = "0.0.0" }
dioxus-hooks = { path = "../packages/hooks", version = "0.0.0" }

[lib]
path = "common.rs"

[[example]]
path = "hello_web.rs"
name = "hello_web"

[[example]]
path = "tide_ssr.rs"
name = "tide_ssr"

[[example]]
path = "doc_generator.rs"
name = "doc_generator"

[[example]]
path = "router.rs"
name = "router"

[[example]]
path = "fc_macro.rs"
name = "fc_macro"

[[example]]
path = "webview.rs"
name = "webview"
