[package]
name = "dioxus-router-guide"
version = "0.0.1"
edition = "2021"
description = "Dioxus router guide, including testable examples"
license = "MIT OR Apache-2.0"
publish = false

[dev-dependencies]
dioxus = { path = "../../packages/dioxus" }
dioxus-desktop = { path = "../../packages/desktop" }
dioxus-web = { path = "../../packages/web" }
dioxus-ssr = { path = "../../packages/ssr" }
dioxus-router = { path = "../../packages/router" }
