[package]
name = "basic-liveview"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true, features = ["liveview"] }

[features]
default = []
liveview = ["dioxus/liveview"]
