[package]
name = "bluetooth-scanner"
version = "0.1.1"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
dioxus = { workspace = true, features = ["desktop"] }
futures-channel = { workspace = true }
futures = { workspace = true }
btleplug = "0.11.8"
