[package]
name = "ecommerce-site"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["ws"] }
cached = "0.44.0"
dioxus = { workspace = true, features = ["fullstack"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = "1.0.160"
tokio = { version = "1.15.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
chrono = { version = "0.4.24", features = ["serde"] }

[features]
web = ["dioxus/web"]
server = ["dioxus/server"]
desktop = ["dioxus/desktop"]
