[package]
name = "ecommerce-site"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.44.0"
dioxus = { workspace = true, features = ["fullstack", "router"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = "1.0.160"
chrono = { version = "0.4.24", features = ["serde"] }

[features]
web = ["dioxus/web"]
server = ["dioxus/server"]
