[package]
name = "fullstack-hello-world-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true, features = ["fullstack"]}
serde = "1.0.159"
reqwest = { workspace = true }

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]
