[package]
name = "liveview-router"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true, features = ["liveview", "router"] }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = []
