[package]
name = "builder_demo"
edition = "2024"
version.workspace = true

[dependencies]
dioxus = {  workspace = true, features = ["fullstack"]}
dioxus-builder = { workspace = true, features = ["document"] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server"]
