[package]
name = "fullstack-auth-example"
version = "0.1.0"
edition = "2021"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-web = { workspace = true, features = ["hydrate"], optional = true }
dioxus = { features = ["fullstack"], workspace = true }
dioxus-fullstack = { workspace = true }
dioxus-cli-config = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tower-http = { workspace = true, features = ["auth"], optional = true }
async-trait = { version = "0.1.71", optional = true }
sqlx = { version = "0.7.0", features = [
    "macros",
    "migrate",
    "postgres",
    "sqlite",
    "_unstable-all-types",
    "tls-native-tls",
    "runtime-tokio",
], optional = true }
http = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

execute = "0.2.12"
serde = { workspace = true }
anyhow = { workspace = true }

[dependencies.axum_session]
workspace = true
features = ["sqlite-rustls"]
optional = true

[dependencies.axum_session_auth]
workspace = true
features = ["sqlite-rustls"]
optional = true

[features]
default = []
server = [
    "dioxus-cli-config",
    "axum",
    "tokio",
    "dioxus-fullstack/axum",
    "tower-http",
    "async-trait",
    "sqlx",
    "axum_session",
    "axum_session_auth",
    "http",
    "tower",
]
web = ["dioxus-web"]
