[package]
name = "fullstack-streaming-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
serde = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, optional = true }
futures-util.workspace = true
once_cell = { workspace = true }

[features]
default = []
server = ["dioxus/server", "dep:tokio"]
web = ["dioxus/web"]
