# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "native-headless-in-bevy"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[features]
tracing = ["dep:tracing-subscriber", "dioxus-native-dom/tracing"]

[dependencies]
anyrender_vello = "0.4.1"
async-std = "1.13"
bevy = { version = "0.16" }
blitz-dom = { workspace = true, default-features = true }
blitz-paint = { workspace = true, default-features = true }
blitz-traits = { workspace = true, default-features = true }
crossbeam-channel = "0.5"
dioxus = { workspace = true }
dioxus-native-dom = { path = "../../packages/native-dom" }
paste = "1.0"
rustc-hash = "1"
tracing-subscriber = { workspace = true, optional = true }
vello = "0.5"
wgpu = { workspace = true }

